--- a/02-loopStudios/src/index.scss
+++ b/02-loopStudios/src/index.scss
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .word-spacing-unset {
+    word-spacing: unset;
+  }
+
+  .word-spacing {
+    word-spacing: 9999rem;
+  }
+}
