--- a/04-bookmark-landing-page/src/App.scss
+++ b/04-bookmark-landing-page/src/App.scss
@@ -1,42 +1,12 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.highlight:before {
+  content: "";
+  position: absolute;
+  background-color: hsl(231, 69%, 60%);
+  width: 100%;
+  top: 9rem;
+  right: -15rem;
+  height: 80%;
+  border: none;
+  border-radius: 999px 0 0 999px;
+  z-index: -1;
 }
