--- a/04-bookmark-landing-page/src/index.scss
+++ b/04-bookmark-landing-page/src/index.scss
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+  padding: 0;
+  margin: 0;
+}
+
+header,
+main,
+footer {
+  min-width: 100vw;
+}
