--- a/04-bookmark-landing-page/src/component/Features/Features.scss
+++ b/04-bookmark-landing-page/src/component/Features/Features.scss
@@ -1,7 +1,24 @@
+@import "../../App.scss";
 #features-section {
+  .features__tabTitle {
+    @media only screen and (max-width: 1023px) {
+      &:first-child .top-line {
+        display: block;
+      }
+    }
+  }
   .features__tabItem {
     &.active {
       border-bottom: 4px solid hsl(0, 94%, 66%);
+    }
+  }
+  .feature__highlight {
+    @extend .highlight;
+    &:before {
+      height: 100%;
+      border-radius: 0 999px 999px 0;
+
+      right: 20%;
     }
   }
 }
