--- a/05-space-tourism/src/App.scss
+++ b/05-space-tourism/src/App.scss
@@ -12,15 +12,25 @@ body,
 }
 
 .background-image {
-  background-repeat: no-repeat;
+  // background-repeat: repeat-y;
   background-size: cover;
   &#home-section {
-    background-image: url(./assets/home/background-home-desktop.jpg);
+    background-image: url(/assets/home/background-home-desktop.jpg);
     @media screen and (max-width: 1024px) {
-      background-image: url(./assets/home/background-home-tablet.jpg);
+      background-image: url(/assets/home/background-home-tablet.jpg);
     }
     @media screen and (max-width: 680px) {
-      background-image: url(./assets/home/background-home-mobile.jpg);
+      background-image: url(/assets/home/background-home-mobile.jpg);
+    }
+  }
+
+  &#destination-section {
+    background-image: url(/assets/destination/background-destination-desktop.jpg);
+    @media screen and (max-width: 1024px) {
+      background-image: url(/assets/destination/background-destination-tablet.jpg);
+    }
+    @media screen and (max-width: 680px) {
+      background-image: url(/assets/destination/background-destination-mobile.jpg);
     }
   }
 }
