--- a/05-space-tourism/src/App.scss
+++ b/05-space-tourism/src/App.scss
@@ -43,6 +43,16 @@ body,
       background-image: url(/assets/crew/background-crew-mobile.jpg);
     }
   }
+
+  &#Technology-section {
+    background-image: url(/assets/technology/background-technology-desktop.jpg);
+    @media screen and (max-width: 1024px) {
+      background-image: url(/assets/technology/background-technology-tablet.jpg);
+    }
+    @media screen and (max-width: 680px) {
+      background-image: url(/assets/technology/background-technology-mobile.jpg);
+    }
+  }
 }
 
 .img-filter {
